# mcp-aws

./: .env.example  Dockerfile  README.md  pyproject.toml
src/mcp_aws/: __init__.py  client.py  config.py  langchain_tools.py  server.py
src/mcp_aws/operations/: __init__.py  cloudformation.py  cloudwatch.py  ec2.py  ecr.py  lambda_.py  route53.py  s3.py  secrets.py  sts.py
tests/: test_langchain_tools.py  test_operations.py
