[project]
name = "mcp-aws"
version = "0.1.0"
description = "AWS operations as Python library, LangChain tools, and MCP server"
requires-python = ">=3.10"
dependencies = ["boto3>=1.28.0", "pydantic-settings>=2.0"]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0.0"]
langchain = ["langchain-core>=0.2.0", "pydantic>=2.0.0"]
all = ["fastmcp>=2.0.0", "langchain-core>=0.2.0", "pydantic>=2.0.0"]
dev = [
    "pytest>=8.0",
    "moto[ec2,s3,secretsmanager,lambda,logs,sts,ecr,route53,cloudformation]>=5.0",
    "pytest-cov",
]

[project.scripts]
mcp-aws = "mcp_aws.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_aws"]

[tool.pytest.ini_options]
testpaths = ["tests"]
